[WFLY-10241] standardize script contents